fixed product preview on safari

--- a/assets/src/style/global-styles.scss
+++ b/assets/src/style/global-styles.scss
@@ -14,6 +14,8 @@ a {
   font-family: $font-bold;
 }
 
+a { -webkit-tap-highlight-color: transparent; }
+
 h2 {
   font-size: 45px;
   line-height: 1;
@@ -37,6 +39,10 @@ h2 {
 
 .j-content-around {
   justify-content: space-around;
+}
+
+.j-content-start {
+  justify-content: flex-start;
 }
 
 .j-content-center {
@@ -417,6 +423,7 @@ h2 {
     font-family: $font-light;
     color: $color-gray;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
     @media (min-width: 768px) {
       font-size: 1.5vw;
