--- a/assets/src/style/pages.scss
+++ b/assets/src/style/pages.scss
@@ -49,6 +49,8 @@
 		font-size: 21px;
 		border-bottom: $border;
 
+		-webkit-tap-highlight-color: transparent;
+
 		&--sub {
 			width: fit-content;
 			font-size: 19px;
@@ -319,7 +321,7 @@
     	display: flex;
     	justify-content: center;
     	align-items: center;
-    	height: 100%;
+    	height: 42%;
 		width: 40%;
 
 		@media (min-width: 576px) {
@@ -367,6 +369,10 @@
 		@media (min-width: 1440px) {
 			height: 46px;
 			font-size: 17px;
+		}
+
+		&.j-content-start {
+			justify-content: flex-start;
 		}
 
 	}
